--- a/index.html
+++ b/index.html
@@ -77,12 +77,12 @@
 id;type;title;illustration;body;bullets;question;options;correctIndex;explanation;theme_primary;theme_accent;theme_bg;theme_text
 Projektihakemisto;content;Projektihakemisto;📂;Kun Sähköprojekti perustetaan G:n Projektinhallinnassa, se luo projektihakemistojen ohjeissa esitetyn mallin mukaisen hakemistorakenteen. Tarvittaessa hakemistoja saadaan lisättyä myös jälkeenpäin.;;;;;#278062;#ED8113;#F4F2EE;#1E2A28;
 Alihakemistot;content;Alihakemistot;📁;Sähköpiirustuksiin kuuluvat CAD-tiedostot tallennetaan aina projektin tai kiinteistön CAD-hakemiston alihakemistoihin käyttötarkoituksensa mukaisesti projektihakemisto-ohjeiden mukaisesti.;;;;;;;;;
-YleisetProjektitiedostot;content;Tiedostot, joita ei esitetä asiakirjaluettelossa;🙈;Asiakirjaluetteloon kuulumattomat projektin yleiset tiedostot tallennetaan M-filesin projektiarkistoon.;Palaverimuistiot|Lähtötiedot|Suunnitteluvaiheilmoitukset;;;;;;;;
+YleisetProjektitiedostot;content;Tiedostot, joita ei esitetä asiakirjaluettelossa;❌;Asiakirjaluetteloon kuulumattomat projektin yleiset tiedostot tallennetaan M-filesin projektiarkistoon.;Palaverimuistiot|Lähtötiedot|Suunnitteluvaiheilmoitukset;;;;;;;;
 Laskelmat;content;Tekniset laskelmat;📐;Erilaiset tekniset laskelmat  tallennetaan Tekninen laskenta -hakemiston alihakemistoihin käyttötarkoituksensa mukaisesti.;Verkostolaskelmat|Valaistuslaskelmat;;;;;;;;
 Asetustiedostot;content;Ohjelmistojen asetustiedostot;⚙️;MagiCad Electrical -ohjelmiston kiinteistö- ja projektikohtaiset tiedostot (kuten .MEP ja .MRD tiedostot) tallennetaan pääsääntöisesti projektihakemistoon kohdenumeron (..\123xxx\123456) alle.;;;;;;;;;
-Sekalaiset;content;Kaikki muut mahdolliset tiedostot;🗂️;Muut kuin Asiakirjaluetteloon liitetyt CAD-tiedostot  täytyy ehdottomasti tallentaa projektin Temp-hakemistoonn. Tällöin ne on helppo tunnistaa hakemistoja siivottaessa. Temp-hakemistoon voi tehdä myös alihakemistoja ja nimetä ne oman käyttäjätunnuksen mukaan.;Kopioimista varten tehdyt blokit|Muut tilapäistiedostot;;;;;;;;
+Sekalaiset;content;Kaikki muut mahdolliset tiedostot;🗂️;Muut kuin Asiakirjaluetteloon liitetyt CAD-tiedostot  täytyy ehdottomasti tallentaa projektin Temp-hakemistoon. Tällöin ne on helppo tunnistaa hakemistoja siivottaessa. Temp-hakemistoon voi tehdä myös alihakemistoja ja nimetä ne oman käyttäjätunnuksen mukaan.;Kopioimista varten tehdyt blokit|Muut tilapäistiedostot;;;;;;;;
 Kysymykset;quiz;Miten se nyt olikaan?;❓;;;M-Files projektiarkistoon tallennetaan;Arkkitehtikuvat|Palaverimuistiot|Ohjelmien asetustiedostot;1;Asiakirjaluetteloon kuulumattomat projektin yleiset tiedostot tallennetaan M-filesin projektiarkistoon.;;;;
-yhteenveto;content;Yhteenveto;📝;Onnistunut aloitus: selkeät tavoitteet, täydet lähtötiedot, sovitut rajapinnat, realistinen aikataulu ja sovittu laatutapa.;;;;;;;;;
+yhteenveto;content;Yhteenveto;📝;Nyt tiedät projektihakemiston ja siinä olevien alihakemistojen tarkoituksen, asiakirjaluetteloon linkitettyjen tiedostojen sijainnit ja M-Filesiin tallennettavat tiedostot sekä asetustiedostojen ja väliaikaisten tiedostojen paikan.,;;;;;;;;;
   </script>
 
   <script>
